src/objects/Training_Event_Dissats__c.object
<CustomObject>
    <description>Training Event-related Dissatisfied Customers/Incidents requiring review</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Training_Event_Dissat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Taken_to_Date__c</fullName>
        <label>Action Taken to Date</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Requested__c</fullName>
        <label>Client Requested</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10240</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Costs__c</fullName>
        <label>Hard Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issue_Is_Currently_With__c</fullName>
        <label>Issue Is Currently With</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Training_Event__r.Opportunity__r.Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Training_Event__r.Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; 
 Training_Event__r.Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager Miscommunication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content not on the mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content too basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deviated from contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up call not received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving out personal information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inadequate tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procedures not followed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subject knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tardiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too much information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer didn&apos;t call client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer no-show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer unprepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrelated content presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workbook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Soft_Costs__c</fullName>
        <label>Soft Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TE_Contract_Amount__c</fullName>
        <formula>Training_Event__r.TE_Contract_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Days__c</fullName>
        <formula>Training_Event__r.Training_Num_of_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TE_Number__c</fullName>
        <formula>Training_Event__r.Training_Event_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Start_Date__c</fullName>
        <formula>Training_Event__r.Training_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TE_Trainer_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TE Trainer Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>0014100000S235n, 0014100000Wic9S</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Event Dissats/Incidents</relationshipLabel>
        <relationshipName>Training_Event_Dissats_Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TE_Trainer__c</fullName>
        <formula>Training_Event__r.Trainer_Assigned__r.FirstName &amp; &quot; &quot; &amp; Training_Event__r.Trainer_Assigned__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Trainer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipName>Training_Event_Dissats</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Training Event Dissat/Incident</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>TE_Start_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Resolved__c</columns>
        <columns>TE_Number__c</columns>
        <columns>TE_Trainer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Dissat_by_Trainer</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Resolved__c</columns>
        <columns>TE_Number__c</columns>
        <columns>TE_Trainer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TE_Trainer__c</field>
            <operation>contains</operation>
            <value>Thomas</value>
        </filters>
        <label>Dissat by Trainer</label>
    </listViews>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Training Event Dissats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event Dissats/Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>